--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "history-of-justice",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@c2dh/react-miller": "^0.1.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
-    "i18next": "^21.6.10",
+    "i18next": "^21.6.11",
     "moment": "^2.29.1",
-    "query-string": "^7.1.0",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
-    "react-i18next": "^11.15.3",
+    "react-i18next": "^11.15.4",
+    "react-rocketjump": "^2.6.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-virtualized": "^9.22.3",
     "sass": "^1.49.7",
     "use-query-params": "^1.2.3",
     "web-vitals": "^2.1.4"
