--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost",
   "dependencies": {
     "@c2dh/react-miller": "^0.1.0",
+    "@kokarn/react-zoom-pan-pinch": "^2.1.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
