--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-virtualized": "^9.22.3",
+    "roman-numerals": "^0.3.2",
     "sass": "^1.49.7",
     "use-query-params": "^1.2.3",
     "web-vitals": "^2.1.4"
