--- a/package.json
+++ b/package.json
@@ -4,27 +4,28 @@
   "private": true,
   "proxy": "http://localhost",
   "dependencies": {
-    "@c2dh/react-miller": "^0.1.0",
+    "@c2dh/react-miller": "^1.0.0-beta.2",
     "@kokarn/react-zoom-pan-pinch": "^2.1.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
-    "i18next": "^21.6.11",
+    "i18next": "^21.6.13",
     "moment": "^2.29.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
-    "react-i18next": "^11.15.4",
+    "react-i18next": "^11.15.6",
+    "react-markdown": "^8.0.0",
     "react-rocketjump": "^2.6.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-virtualized": "^9.22.3",
     "roman-numerals": "^0.3.2",
-    "sass": "^1.49.7",
+    "sass": "^1.49.9",
     "use-query-params": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
