--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-rocketjump": "^2.6.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.4",
+    "react-spring-3d-carousel": "^1.2.1",
+    "react-spring-carousel": "^2.0.12",
     "react-virtualized": "^9.22.3",
     "roman-numerals": "^0.3.2",
     "sass": "^1.49.9",
