--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ga": "^3.3.0",
     "react-i18next": "^11.15.6",
     "react-markdown": "^8.0.0",
+    "react-player": "^2.10.0",
     "react-rocketjump": "^2.6.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
