--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "debounce": "^1.2.1",
     "i18next": "^21.6.13",
     "moment": "^2.29.1",
     "query-string": "^7.1.1",
@@ -27,6 +28,7 @@
     "react-spring": "^9.4.4",
     "react-spring-3d-carousel": "^1.2.1",
     "react-spring-carousel": "^2.0.12",
+    "react-use-gesture": "^9.1.3",
     "react-virtualized": "^9.22.3",
     "roman-numerals": "^0.3.2",
     "sass": "^1.49.9",
