--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^2.0.6",
+    "prettier": "^2.7.1"
   }
 }
