--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_GA_CODE=
 REACT_APP_MAPBOX_ACCESS_TOKEN=
 REACT_APP_DEFAULT_LANGUAGE=fr-FR
 REACT_APP_LANGUAGES='fr-FR'
+REACT_APP_TYPEKIT_ID=vgy3iil
