--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.10",
     "react-ga": "^3.3.0",
     "react-i18next": "^11.15.6",
     "react-markdown": "^8.0.0",
