--- a/package.json
+++ b/package.json
@@ -2,41 +2,38 @@
   "name": "history-of-justice",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost",
   "dependencies": {
-    "@c2dh/react-miller": "^1.0.0-beta.2",
+    "@c2dh/react-miller": "^1.0.0",
     "@kokarn/react-zoom-pan-pinch": "^2.1.5",
-    "@react-spring/parallax": "^9.4.5",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
-    "bootstrap": "^5.1.3",
+    "@react-spring/parallax": "^9.5.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.2.2",
     "debounce": "^1.2.1",
-    "i18next": "^21.6.13",
-    "moment": "^2.29.1",
+    "i18next": "^21.10.0",
+    "moment": "^2.29.4",
     "query-string": "^7.1.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.0",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-ga": "^3.3.0",
-    "react-i18next": "^11.15.6",
-    "react-markdown": "^8.0.0",
-    "react-player": "^2.10.0",
-    "react-rocketjump": "^2.6.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "react-spring": "^9.4.4",
+    "react-ga": "^3.3.1",
+    "react-i18next": "^11.18.6",
+    "react-markdown": "^8.0.3",
+    "react-player": "^2.11.0",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
     "react-spring-3d-carousel": "^1.2.1",
-    "react-spring-carousel": "^2.0.12",
+    "react-spring-carousel": "^2.0.19",
     "react-use-gesture": "^9.1.3",
     "react-virtualized": "^9.22.3",
     "roman-numerals": "^0.3.2",
-    "sass": "^1.49.9",
+    "sass": "^1.55.0",
     "use-media": "^1.4.0",
-    "use-query-params": "^1.2.3",
-    "web-vitals": "^2.1.4"
+    "use-query-params": "^2.1.1",
+    "web-vitals": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
