--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.2",
     "debounce": "^1.2.1",
     "i18next": "^21.10.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-ga": "^3.3.1",
+    "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.6",
     "react-markdown": "^8.0.3",
     "react-player": "^2.11.0",
