--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^1.4.1",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.6",
     "react-markdown": "^8.0.3",
